--- a/ElasticSwift.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/ElasticSwift.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>ElasticSwift.xcscheme</key>
+    <key>ElasticSwift-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
