add custom elasticsearch version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ xcode_project: ElasticSwift.xcodeproj
 xcode_scheme: ElasticSwiftTests
 services:
   - elasticsearch
+before_install:
+  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.3.deb && sudo dpkg -i --force-confnew elasticsearch-5.6.3.deb && sudo service elasticsearch restart
 before_script:
   - sleep 10
 env:
