--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: objective-c
-osx_image: xcode9
+osx_image: xcode9.1
 xcode_project: ElasticSwift.xcodeproj
 xcode_scheme: ElasticSwiftTests
-services:
-  - elasticsearch
 before_install:
-  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.3.deb && sudo dpkg -i --force-confnew elasticsearch-5.6.3.deb && sudo service elasticsearch restart
+  - brew update
+  - brew install elasticsearch
+  - brew services start elasticsearch
 before_script:
   - sleep 10
 env:
