--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode9.3
+osx_image: xcode9.3beta
 xcode_project: ElasticSwift.xcodeproj
 xcode_scheme: ElasticSwiftTests
 before_install:
