--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ xcode_project: ElasticSwift.xcodeproj
 xcode_scheme: ElasticSwiftTests
 before_install:
   - brew update
+  - brew cask install homebrew/cask-versions/adoptopenjdk8
   - brew install elasticsearch
   - brew services start elasticsearch
 before_script:
