--- a/ElasticSwift.xcodeproj/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
+++ b/ElasticSwift.xcodeproj/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "ElasticSwift::ElasticSwift"
+            BuildableName = "ElasticSwift.framework"
+            BlueprintName = "ElasticSwift"
+            ReferencedContainer = "container:ElasticSwift.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
