[chore] quite brew update logs in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ osx_image: xcode10.2
 xcode_project: ElasticSwift.xcodeproj
 xcode_scheme: ElasticSwiftTests
 before_install:
-  - brew update
+  - brew update >/dev/null
   - brew cask install homebrew/cask-versions/adoptopenjdk8
   - brew install elasticsearch
   - brew services start elasticsearch
