--- a/ElasticSwift.xcodeproj/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
+++ b/ElasticSwift.xcodeproj/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
@@ -14,20 +14,6 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ElasticSwift::ElasticSwiftCore"
-               BuildableName = "ElasticSwiftCore.framework"
-               BlueprintName = "ElasticSwiftCore"
-               ReferencedContainer = "container:ElasticSwift.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "ElasticSwift::ElasticSwiftNetworking"
                BuildableName = "ElasticSwiftNetworking.framework"
                BlueprintName = "ElasticSwiftNetworking"
@@ -42,9 +28,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ElasticSwift::ElasticSwiftCodableUtils"
-               BuildableName = "ElasticSwiftCodableUtils.framework"
-               BlueprintName = "ElasticSwiftCodableUtils"
+               BlueprintIdentifier = "ElasticSwift::ElasticSwiftQueryDSL"
+               BuildableName = "ElasticSwiftQueryDSL.framework"
+               BlueprintName = "ElasticSwiftQueryDSL"
                ReferencedContainer = "container:ElasticSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -70,9 +56,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ElasticSwift::ElasticSwiftDSL"
-               BuildableName = "ElasticSwiftDSL.framework"
-               BlueprintName = "ElasticSwiftDSL"
+               BlueprintIdentifier = "ElasticSwift::ElasticSwiftCodableUtils"
+               BuildableName = "ElasticSwiftCodableUtils.framework"
+               BlueprintName = "ElasticSwiftCodableUtils"
+               ReferencedContainer = "container:ElasticSwift.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "ElasticSwift::ElasticSwiftCore"
+               BuildableName = "ElasticSwiftCore.framework"
+               BlueprintName = "ElasticSwiftCore"
                ReferencedContainer = "container:ElasticSwift.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
