--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ script:
   - swift test
 after_success:
   - xcodebuild -quiet -scheme ElasticSwift-Package build test
-  - bash <(curl -s https://codecov.io/bash) -J '^ElasticSwift$'
+  - bash <(curl -s https://codecov.io/bash) -J '^ElasticSwift.*$'
