--- a/ElasticSwift.xcodeproj/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
+++ b/ElasticSwift.xcodeproj/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
@@ -82,7 +82,46 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "ElasticSwift::ElasticSwift"
+            BuildableName = "ElasticSwift.framework"
+            BlueprintName = "ElasticSwift"
+            ReferencedContainer = "container:ElasticSwift.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "ElasticSwift::ElasticSwiftCodableUtils"
+            BuildableName = "ElasticSwiftCodableUtils.framework"
+            BlueprintName = "ElasticSwiftCodableUtils"
+            ReferencedContainer = "container:ElasticSwift.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "ElasticSwift::ElasticSwiftCore"
+            BuildableName = "ElasticSwiftCore.framework"
+            BlueprintName = "ElasticSwiftCore"
+            ReferencedContainer = "container:ElasticSwift.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "ElasticSwift::ElasticSwiftNetworking"
+            BuildableName = "ElasticSwiftNetworking.framework"
+            BlueprintName = "ElasticSwiftNetworking"
+            ReferencedContainer = "container:ElasticSwift.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "ElasticSwift::ElasticSwiftQueryDSL"
+            BuildableName = "ElasticSwiftQueryDSL.framework"
+            BlueprintName = "ElasticSwiftQueryDSL"
+            ReferencedContainer = "container:ElasticSwift.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
