--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - cd $HOME
   - wget -q -O elasticsearch.tar.gz https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.8.3.tar.gz
   - mkdir elasticsearch
-  - tar xzf swift.tar.gz -C elasticsearch --strip-components=1
+  - tar xzf elasticsearch.tar.gz -C elasticsearch --strip-components=1
   - cd elasticsearch
   - bin/elasticsearch -d -p pid
 before_script:
