--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,17 @@ matrix:
         - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
         - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
         - cd $TRAVIS_BUILD_DIR
+    - os: linux
+      dist: bionic
+      sudo: required
+      install:
+        - cd $HOME
+        - sudo apt-get install -y clang libicu-dev
+        - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.1-release/ubuntu1804/swift-5.1-RELEASE/swift-5.1-RELEASE-ubuntu18.04.tar.gz
+        - mkdir swift-RELEASE
+        - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
+        - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
+        - cd $TRAVIS_BUILD_DIR
     - os: osx
       sudo: required
       osx_image: xcode11
