add ElasticSwiftNetworkingNIO to Codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ matrix:
         - cd $TRAVIS_BUILD_DIR
       after_success:
         - xcodebuild -quiet -enableCodeCoverage YES -scheme ElasticSwift-Package clean build test
-        - bash <(curl -s https://codecov.io/bash) -J 'ElasticSwift' -J 'ElasticSwiftCore' -J 'ElasticSwiftCodableUtils' -J 'ElasticSwiftNetworking' -J 'ElasticSwiftQueryDSL'
+        - bash <(curl -s https://codecov.io/bash) -J 'ElasticSwift' -J 'ElasticSwiftCore' -J 'ElasticSwiftCodableUtils' -J 'ElasticSwiftNetworking' -J 'ElasticSwiftQueryDSL' -J 'ElasticSwiftNetworkingNIO'
 
 before_install:
   - cd $HOME
