--- a/.swiftpm/xcode/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/ElasticSwift-Package.xcscheme
@@ -197,6 +197,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "ElasticSwiftCoreTests"
+               BuildableName = "ElasticSwiftCoreTests"
+               BlueprintName = "ElasticSwiftCoreTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
