--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: generic
-matrix:
+jobs:
   include:
     - os: linux
       dist: xenial
@@ -24,6 +24,17 @@ matrix:
         - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
         - cd $TRAVIS_BUILD_DIR
     - os: linux
+      dist: xenial
+      sudo: required
+      install:
+        - cd $HOME
+        - sudo apt-get install -y clang libicu-dev
+        - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.2.1-release/ubuntu1604/swift-5.2.1-RELEASE/swift-5.2.1-RELEASE-ubuntu16.04.tar.gz
+        - mkdir swift-RELEASE
+        - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
+        - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
+        - cd $TRAVIS_BUILD_DIR
+    - os: linux
       dist: bionic
       sudo: required
       install:
@@ -41,6 +52,17 @@ matrix:
         - cd $HOME
         - sudo apt-get install -y clang libicu-dev
         - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.1.4-release/ubuntu1804/swift-5.1.4-RELEASE/swift-5.1.4-RELEASE-ubuntu18.04.tar.gz
+        - mkdir swift-RELEASE
+        - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
+        - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
+        - cd $TRAVIS_BUILD_DIR
+    - os: linux
+      dist: bionic
+      sudo: required
+      install:
+        - cd $HOME
+        - sudo apt-get install -y clang libicu-dev
+        - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.2.1-release/ubuntu1804/swift-5.2.1-RELEASE/swift-5.2.1-RELEASE-ubuntu18.04.tar.gz
         - mkdir swift-RELEASE
         - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
         - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
