--- a/.travis.yml
+++ b/.travis.yml
@@ -29,14 +29,25 @@ jobs:
       install:
         - cd $HOME
         - sudo apt-get install -y clang libicu-dev
-        - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.2.4-release/ubuntu1804/swift-5.2.4-RELEASE/swift-5.2.4-RELEASE-ubuntu18.04.tar.gz
+        - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.2.5-release/ubuntu1804/swift-5.2.5-RELEASE/swift-5.2.5-RELEASE-ubuntu18.04.tar.gz
+        - mkdir swift-RELEASE
+        - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
+        - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
+        - cd $TRAVIS_BUILD_DIR
+    - os: linux
+      dist: focal
+      sudo: required
+      install:
+        - cd $HOME
+        - sudo apt-get install -y clang libicu-dev
+        - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.3-release/ubuntu2004/swift-5.3-RELEASE/swift-5.3-RELEASE-ubuntu20.04.tar.gz
         - mkdir swift-RELEASE
         - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
         - export PATH="${HOME}/swift-RELEASE/usr/bin:${PATH}"
         - cd $TRAVIS_BUILD_DIR
     - os: osx
       sudo: required
-      osx_image: xcode11.5
+      osx_image: xcode12
       install:
         - cd $TRAVIS_BUILD_DIR
       after_success:
@@ -45,7 +56,7 @@ jobs:
 
 before_install:
   - cd $HOME
-  - wget -q -O elasticsearch.tar.gz https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.8.8.tar.gz
+  - wget -q -O elasticsearch.tar.gz https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.8.12.tar.gz
   - mkdir elasticsearch
   - tar xzf elasticsearch.tar.gz --strip-components=1 -C elasticsearch
   - cd elasticsearch
