[fix] travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
       sudo: required
       install:
         - cd $HOME
-        - sudo apt-get install -y clang libicu-dev
+        - sudo apt-get install -y binutils git gnupg2 libc6-dev libcurl4 libedit2 libgcc-9-dev libpython2.7 libsqlite3-0 libstdc++-9-dev libxml2 libz3-dev pkg-config tzdata zlib1g-dev
         - wget -q -O swift.tar.gz https://swift.org/builds/swift-5.3-release/ubuntu2004/swift-5.3-RELEASE/swift-5.3-RELEASE-ubuntu20.04.tar.gz
         - mkdir swift-RELEASE
         - tar xzf swift.tar.gz -C swift-RELEASE --strip-components=1
